RESOLVED FIXED69743
JSVALUE32_64 DFG JIT - Bug fix for BranchNull
https://bugs.webkit.org/show_bug.cgi?id=69743
Summary JSVALUE32_64 DFG JIT - Bug fix for BranchNull
Yuqiang Xian
Reported 2011-10-10 00:07:43 PDT
Sorry... it's still a undefined or null comparison issue - which is missed in previous commits.
Attachments
the patch (1.82 KB, patch)
2011-10-10 00:13 PDT, Yuqiang Xian
no flags
Yuqiang Xian
Comment 1 2011-10-10 00:13:05 PDT
Created attachment 110333 [details] the patch This passed the last SunSpider case "access-binary-trees".
WebKit Review Bot
Comment 2 2011-10-10 11:44:39 PDT
Comment on attachment 110333 [details] the patch Clearing flags on attachment: 110333 Committed r97072: <http://trac.webkit.org/changeset/97072>
WebKit Review Bot
Comment 3 2011-10-10 11:44:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.