JSVALUE32_64 DFG JIT - Bug fix for BranchNull https://bugs.webkit.org/show_bug.cgi?id=69743

Patch by Yuqiang Xian <yuqiang.xian@intel.com> on 2011-10-10
Reviewed by Darin Adler.

This fixes the error in access-binary-trees. All SunSpider cases passed.

* dfg/DFGJITCodeGenerator32_64.cpp:
(JSC::DFG::JITCodeGenerator::nonSpeculativePeepholeBranchNull):

Canonical link: https://commits.webkit.org/85815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97072 268f45cc-cd09-0410-ab3c-d52691b4dbfc